# praktikum-workbook

./: .gitignore  README.md
dummy_spreadsheet/: CMakeLists.txt  Doxyfile.in
dummy_spreadsheet/cmake/: FindANTLR.cmake  ucm.cmake
dummy_spreadsheet/src/: FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  formula.h  sheet.cpp  sheet.h  structures.cpp
dummy_spreadsheet/tests/: cell_tests.cpp  execute_ast.cpp  position_tests.cpp  sheet_tests.cpp
extended_vector/: .clang-format  CMakeLists.txt  raw_memory.h  tests.cpp  vector.h
first_deadline/: .clang-format  string_processing.cpp  string_processing.h
first_spring/: CMakeLists.txt  document.cpp  document.h  dummy_framework.h  main.cpp  paginator.h  read_input_functions.cpp  read_input_functions.h  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  stdafx.h  string_processing.h  test_main.cpp
json/: .clang-format  CMakeLists.txt
json/app/: main.cpp
json/src/: json.cpp  json.h  json_builder.cpp
json/tests/: test_main.cpp  tests_json.cpp
mylinked_list/: .gitignore  CMakeLists.txt  Makefile  main.cpp
mylinked_list/array_ptr/: CMakeLists.txt  array_ptr.h
mylinked_list/linked_list/: CMakeLists.txt  linked_list.h
mylinked_list/single_linked_list/: CMakeLists.txt  single_linked_list.h
mylinked_list/src/: array_ptr.h  bidirect_linked_list.h  single_linked_list.h
mylinked_list/tests/: array_ptr_tests.cpp  bidirect_linked_list_test.cpp  helper.h  single_linked_list_test.cpp
mython/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp
mython/src/: lexer.cpp  lexer.h  parse.cpp  parse.h  runtime.cpp  runtime.h  statement.cpp  statement.h
mython/tests/: lexer_test_open.cpp  parse_test.cpp  runtime_test.cpp  statement_test.cpp
optional/: CMakeLists.txt  main.cpp  optional.h
search_server/: CMakeLists.txt  Makefile  concurrent_map.h  dummy_framework.h  main.cpp  read_input_functions.cpp  remove_duplicates.h  search_server.cpp  search_server.h  stdafx.h  stream_uniter.h  tests.cpp
second_deadline/: CMakeLists.txt  concurrent_map.h  document.cpp  log_duration.h  main.cpp  paginator.h  process_queries.cpp  process_queries.h  remove_duplicates.cpp  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  tests.cpp
simple_vector/: CMakeLists.txt  array_ptr.h  simple_vector.h  tests.cpp
transport_handbook/: .clang-format  CMakeLists.txt  domain.cpp  domain.h  geo.cpp  geo.h  graph.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  map_renderer.proto  ranges.h  request_handler.cpp  request_handler.h  router.h  serialization.cpp  serialization.h  svg.cpp  svg.h  svg.proto  transport_catalogue.cpp  transport_catalogue.h  transport_catalogue.proto  transport_router.cpp  transport_router.h
transport_handbook/app/: geo.h  input_reader.cpp  input_reader.h  main.cpp  transport_catalogue.cpp  transport_catalogue.h
transport_handbook/src/: control.cpp  control_reader.cpp  control_reader.h  domain.cpp  geo.cpp  geo.h  graph.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  map_renderer.cpp  map_renderer.h  ranges.h  request_handler.cpp  request_handler.h  router.h  stat_reader.cpp  stat_reader.h  svg.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h  view.cpp  view_data.cpp  view_data.h
transport_handbook/tests/: test_main.cpp
