cmake_minimum_required(VERSION 3.16)
project(json)
set(CMAKE_CXX_STANDARD 20)
include (ucm/ucm.cmake)
if (EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    conan_basic_setup()
else ()
    message(WARNING "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
endif ()
ucm_add_dirs(src TO SOURCES)
ucm_add_dirs(tests TO TESTS)
ucm_add_dirs(app TO APP)
include_directories(src)
include_directories(tests)
add_executable(tests_json ${TESTS} ${SOURCES})
add_executable(json ${APP} ${SOURCES})
target_link_libraries(json ${CONAN_LIBS})
target_link_libraries(tests_json ${CONAN_LIBS})