cmake_minimum_required(VERSION 3.16)
project(transport_handbook)
set(CMAKE_CXX_STANDARD 20)
include (ucm/ucm.cmake)
if (EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    conan_basic_setup()
else ()
    message(WARNING "The file conanbuildinfo.cmake doesn't exist, you have to run conan install first")
endif ()

ucm_add_dirs(app TO SOURCES)
ucm_add_dirs(tests TO TESTS)
add_executable(tests_transport_handbook ${TESTS} ${SOURCES})
#target_link_libraries(transport_handbook ${CONAN_LIBS})
target_link_libraries(tests_transport_handbook ${CONAN_LIBS})